--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
 	<main>
 
         <!-- Table 1 -->
-		<table class="middle">
+		<table id="table-1" class="middle">
             <tr>
                 <td id="t11">left</td>
                 <td class="center">center</td>
                 <td class="right">right</td>
             </tr>
             <tr>
-                <td id="t12">left</td>
+                <td id="t12" class="center">left</td>
                 <td class="center">center</td>
                 <td class="right">right</td>
             </tr>
