--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
                 <td class="right">right</td>
             </tr>
             <tr>
-                <td id="t13">left</td>
+                <td id="t13" class="right">left</td>
                 <td class="center">center</td>
                 <td class="right">right</td>
             </tr>
